--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scriptes\Player.cs" />
+    <Compile Include="Assets\Scriptes\Shredder.cs" />
     <None Include="Assets\Z.Space Shooter Visual Assets\license.txt" />
     <None Include="Assets\Z.Space Shooter Visual Assets\Spritesheet\sheet.xml" />
     <Reference Include="Unity.Timeline.Editor">
