Multiple Enemies spawning in the same wave once

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scriptes\EnemyPathing.cs" />
+    <Compile Include="Assets\Scriptes\EnemySpawner.cs" />
     <Compile Include="Assets\Scriptes\Player.cs" />
     <Compile Include="Assets\Scriptes\Shredder.cs" />
     <Compile Include="Assets\Scriptes\WaveConfig.cs" />
