Health added to roger and bernerred

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scriptes\DamageDealer.cs" />
+    <Compile Include="Assets\Scriptes\Enemy.cs" />
     <Compile Include="Assets\Scriptes\EnemyPathing.cs" />
     <Compile Include="Assets\Scriptes\EnemySpawner.cs" />
     <Compile Include="Assets\Scriptes\Player.cs" />
